   -> New procedure added to NGINX entrypoint to run envsubst against nginx.conf
- NGINX log permissions made stricter
   -> New procedure added to NGINX entrypoint to chmod 700 log files
- wp-config.php permissions made stricter
   -> Added line to wordpress permissions.sh script to chmod 400 wp-config.php
- File cleanup

v1.0.13
=======
- Wordpress version updated to 5.4.2

v1.0.14
=======
- External SMTP server configuration added to wordpress image
   -> postfix.ini file added
- Postfix image added

v1.0.15
=======
- New alpine MariaDB image added (runs older version of Mariadb 10.4.13)
- Drupal image added
- Links replaced by networking added to docker-compose examples
- Postfix network added to docker-compose examples
- Wordpress permissions runs on start now
- Modsecurity changed from DetectionOnly to On
- Mosecurity debug log level changed to 0 and output to stderr
- Permissions script now runs once a day rather than hourly
- Domain restrictions removed from postfix configuration
- Added option to whitelist IP addresses for basic auth in .env file

v1.0.16
=======
- Added environment variable for modsecurity engine mode to webserver
- Added whitelist file to modsecurity configuration to webserver

v1.0.17
=======
- Changed wp command utility owner from root:root to root:www-data in wordpress image
- Extra hardening measures added to webserver build
   -> block_ext.conf
   -> block_non_english_chars.conf
   -> block_http_ref.conf
   -> block_files.txt
   -> block_req_methods.conf
   -> block_suspicious_query.conf
   -> custom_error.conf
   -> civicrm.conf
   -> headers.conf
   -> wordpress.conf
   -> ssl.conf
   -> error.html
   -> block_user_agents.conf
- Pre-build config reorg for webserver directory

v1.0.18
=======
- Added server_names_hash_bucket_size to nginx.conf
- Added referer_hash_bucket_size to default.conf

v1.0.19
=======
- Added Drupal image
- Added Memcache image (for drupal)